--- a/home.html
+++ b/home.html
@@ -118,9 +118,28 @@
             line-height: 64px;
             padding-bottom: 16px;
         }
+
+        .headerDiv {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .headerImage {
+            width: 90%;
+        }
+
+        .battleButton {
+            height: 50px;
+            width: 200px;
+            background-color: transparent;
+            color: black;
+            font-size: 28px;
+            line-height: 36px;
+        }
+
     </style>
 </head>
-<h1>Pokemon</h1>
 <script>
     function onLoad() {
         console.log(document.getElementById('container'));
@@ -208,9 +227,32 @@
         pokemonDiv.style.color = 'white';
     }
 
+    function battle() {
+        var audio = document.getElementById('battle');
+        if (audio.duration > 0 && !audio.paused) {
+            audio.pause();
+            document.getElementsByTagName('body')[0].style.backgroundImage = 'unset';
+            document.getElementsByTagName('body')[0].style.backgroundColor = 'whitesmoke';
+            document.getElementById('battle-button').style.color = 'black';
+        }
+        else {
+            audio.play();
+            document.getElementsByTagName('body')[0].style.backgroundImage = "url('https://thumbs.gfycat.com/AlarmingRaggedChick-small.gif')";
+            document.getElementsByTagName('body')[0].style.backgroundSize = 'cover';
+            document.getElementById('battle-button').style.color = 'white';
+        }
+    }
 </script>
+<div class="headerDiv">
+    <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/1200px-International_Pok%C3%A9mon_logo.svg.png'
+        class="headerImage" />
+    <button id='battle-button' class='battleButton' onclick="battle()">BATTLE</button>
+</div>
 
 <body>
+    <audio id='battle'>
+        <source src="battle.mp3" type="audio/mp3">
+    </audio>
     <div id='container'>
 
     </div>
